crates/tokmd-format/tests/snapshots/fun_snapshot_w70__w70_midi_scale_fragment.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w70.rs
expression: "midi_hex(&notes, 140)"
---
4d 54 68 64 00 00 00 06 00 00 00 01 01 e0 4d 54 72 6b 00 00 00 38 00 ff 51 03 06 8a 1b 00 90 3c 5a 81 70 80 3c 00 00 90 3e 5a 81 70 80 3e 00 00 90 40 5a 81 70 80 40 00 00 90 41 5a 81 70 80 41 00 00 90 43 5a 81 70 80 43 00 00 ff 2f 00
