crates/tokmd-format/tests/snapshots/fun_snapshot_w70__w70_obj_empty_city.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w70.rs
expression: "render_obj(&[])"
---
# tokmd code city
