crates/tokmd-format/tests/snapshots/fun_snapshot_w70__w70_obj_fractional_coords.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w70.rs
expression: render_obj(&buildings)
---
# tokmd code city
o precise
v 1.5 2.5 0
v 2.25 2.5 0
v 2.25 3.25 0
v 1.5 3.25 0
v 1.5 2.5 3.25
v 2.25 2.5 3.25
v 2.25 3.25 3.25
v 1.5 3.25 3.25
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
