crates/tokmd-format/tests/snapshots/fun_snapshot_w70__w70_obj_special_chars.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w70.rs
expression: render_obj(&buildings)
---
# tokmd code city
o C____embedded_
v 1 2 0
v 3.5 2 0
v 3.5 4.5 0
v 1 4.5 0
v 1 2 5
v 3.5 2 5
v 3.5 4.5 5
v 1 4.5 5
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
