crates/tokmd-format/tests/snapshots/fun_snapshot_w70__w70_obj_zero_height.snap
---
source: crates/tokmd-format/tests/fun_snapshot_w70.rs
expression: render_obj(&buildings)
---
# tokmd code city
o empty
v 0 0 0
v 3 0 0
v 3 3 0
v 0 3 0
v 0 0 0
v 3 0 0
v 3 3 0
v 0 3 0
f 1 2 3 4
f 5 6 7 8
f 1 2 6 5
f 2 3 7 6
f 3 4 8 7
f 4 1 5 8
